syntax = "proto3";
package currency;
option go_package = "./;proto";

service Currency {
  rpc GetExchangeRate(RequestExchangeRate) returns (ReplyExchangeRate) {}
}

message RequestExchangeRate {
  string customerCurrency = 1;
}

message ReplyExchangeRate {
  float exchangeRate = 1;
}